chore: 新增对Jspecify规范的支持